@@ -8,7 +8,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
-import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 /**
@@ -16,16 +15,24 @@ import java.util.stream.Stream;
  */
 public class SourceCodeProcessor {
 
-    public static ProcessResult processSourceCode(String directoryPath, String[] fileExtensions, String[] excludedKeywords) {
+    public static ProcessResult processSourceCode(String directoryPath, String[] excludePath, String[] fileExtensions, String[] excludedKeywords) {
         long totalFiles = 0;
         long totalLines = 0;
         System.out.println("directoryPath: " + directoryPath);
         System.out.println("fileExtensions: " + Arrays.toString(fileExtensions));
         System.out.println("excludedKeywords: " + Arrays.toString(excludedKeywords));
 
-        try {
-            List<Path> files = Files.walk(Paths.get(directoryPath))
+        try (Stream<Path> walk = Files.walk(Paths.get(directoryPath))) {
+            List<Path> files = walk
                     .filter(Files::isRegularFile)
+                    .filter(path -> {
+                        for (String pathToExclude : excludePath) {
+                            if (path.toString().contains(pathToExclude)) {
+                                return false;
+                            }
+                        }
+                        return true;
+                    })
                     .filter(path -> isFileWithExtensions(path, fileExtensions))
                     .toList();
 
@@ -33,11 +40,11 @@ public class SourceCodeProcessor {
             Path processed = Paths.get("processed-result.txt");
             System.out.println("processed: " + processed);
 
-            // 以utf-8编码写入文件，如果有则覆盖
+            // 以 utf-8 编码写入文件，如果有则覆盖
             FileWriter fileWriter = new FileWriter(processed.toFile(), StandardCharsets.UTF_8, false);
 
             for (Path file : files) {
-                String content = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+                String content = Files.readString(file);
                 String processedContent = processContent(content, excludedKeywords);
 
                 totalFiles++;
@@ -51,7 +58,7 @@ public class SourceCodeProcessor {
             return new ProcessResult(totalFiles, totalLines, processed.toFile());
         } catch (IOException e) {
             // 弹出错误框
-            e.printStackTrace();
+            System.err.println("Error processing source code." + Arrays.toString(e.getStackTrace()));
             return null;
         }
     }
@@ -59,8 +66,8 @@ public class SourceCodeProcessor {
     private static String processContent(String content, String[] excludedKeywords) {
         // 包含多行注释和javaDoc注释的正则表达式
         String mutiLineCommentRegex = "/\\*([^*]|[\\r\\n]|(\\*+([^*/]|[\\r\\n])))*\\*+/";
-        // 包含单行注释的正则表达式
-        String singleLineCommentRegex = "//.*";
+        // 包含单行注释的正则表达式（以//开头，以换行符结尾）
+        String singleLineCommentRegex = "//.*\n";
 
         content = content.replaceAll(mutiLineCommentRegex, "");
         content = content.replaceAll(singleLineCommentRegex, "");
@@ -68,10 +75,11 @@ public class SourceCodeProcessor {
         // 将content转为以行的流
         List<String> lines = content.lines().toList();
         List<String> list = lines.stream().filter(SourceCodeProcessor::filterBlankLines)
+                // 过滤掉以excludedKeywords开头的行
                 .filter(line -> filterLine(line, excludedKeywords)).toList();
         content = String.join("\n", list);
 
-        return content += "\n";
+        return content + "\n";
     }
 
     private static boolean filterBlankLines(String line) {
@@ -99,33 +107,6 @@ public class SourceCodeProcessor {
                     .endsWith(extension.trim().toLowerCase()
                             .split("\\*")[1].replace(".", "")
                     )) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    private static List<String> processLines(List<String> lines, String[] excludedKeywords) {
-        // 处理每一行源代码，删除空行，删除注释，删除指定开头的行
-        // 如果excludedKeywords为空，则不删除指定开头的行
-        Stream<String> stringStream = lines.stream()
-                .filter(line -> !line.trim().isEmpty())
-                // 删除单行注释
-                .filter(line -> !line.trim().startsWith("//"))
-                // 删除多行注释(以/*开头，以*/结尾，以及中间的所有行，使用正则表达式)
-                .filter(line -> !line.trim().matches("/\\*.*\\*/"))
-                // 删除文档注释(以/**开头，以*/结尾，以及中间的所有行，使用正则表达式)
-                .filter(line -> !line.trim().matches("/\\*\\*.*\\*/"));
-        if (!"".equals(excludedKeywords[0])) {
-            stringStream = stringStream.filter(line -> !startsWithAny(line, excludedKeywords));
-        }
-        return stringStream.toList();
-
-    }
-
-    private static boolean startsWithAny(String line, String[] prefixes) {
-        for (String prefix : prefixes) {
-            if (line.startsWith(prefix.trim())) {
                 return true;
             }
         }
